Update CNRM bucket name

--- a/foo-corp/namespaces/jsolarz-sandbox/storage-bucket.yaml
+++ b/foo-corp/namespaces/jsolarz-sandbox/storage-bucket.yaml
@@ -3,7 +3,7 @@ kind: StorageBucket
 metadata:
   labels:
     label-one: "value-one"
-  name: storagebucket-sample
+  name: storagebucket-sample-jsolarz
 spec:
   lifecycleRule:
     - action:
