--- a/hipstershop/cluster/fulfillmentcenter-crd.yaml
+++ b/hipstershop/cluster/fulfillmentcenter-crd.yaml
@@ -2,9 +2,9 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: fulfillmentcenters.foo-corp.com
+  name: fulfillmentcenters.hipstershop.com
 spec:
-  group: foo-corp.com
+  group: hipstershop.com
   versions:
     - name: v1
       served: true
