--- a/hipstershop/namespaces/sre-rolebinding.yaml
+++ b/hipstershop/namespaces/sre-rolebinding.yaml
@@ -6,7 +6,7 @@ metadata:
     configmanagement.gke.io/namespace-selector: sre-supported
 subjects:
 - kind: Group
-  name: sre@foo-corp.com
+  name: sre@hipstershop.com
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: ClusterRole
