--- a/hipstershop/cluster/namespace-reader-clusterrolebinding.yaml
+++ b/hipstershop/cluster/namespace-reader-clusterrolebinding.yaml
@@ -6,6 +6,9 @@ subjects:
 - kind: User
   name: cheryl@hipstershop.com
   apiGroup: rbac.authorization.k8s.io
+- kind: User
+  name: jane@hipstershop.com
+  apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: ClusterRole
   name: namespace-reader
