--- a/hipstershop/cluster/namespace-reader-clusterrolebinding.yaml
+++ b/hipstershop/cluster/namespace-reader-clusterrolebinding.yaml
@@ -6,7 +6,10 @@ subjects:
 - kind: User
   name: cheryl@hipstershop.com
   apiGroup: rbac.authorization.k8s.io
-roleRef:
+- kind: User
+  name: jane@hipstershop.com
+  apiGroup: rbac.authorization.k8s.io
+oleRef:
   kind: ClusterRole
   name: namespace-reader
   apiGroup: rbac.authorization.k8s.io
