--- a/hipstershop/cluster/namespace-reader-clusterrolebinding.yaml
+++ b/hipstershop/cluster/namespace-reader-clusterrolebinding.yaml
@@ -6,10 +6,7 @@ subjects:
 - kind: User
   name: cheryl@hipstershop.com
   apiGroup: rbac.authorization.k8s.io
-- kind: User
-  name: jane@hipstershop.com
-  apiGroup: rbac.authorization.k8s.io
-oleRef:
+roleRef:
   kind: ClusterRole
   name: namespace-reader
   apiGroup: rbac.authorization.k8s.io
