--- a/hipstershop/cluster/namespace-reader-clusterrolebinding.yaml
+++ b/hipstershop/cluster/namespace-reader-clusterrolebinding.yaml
@@ -9,7 +9,7 @@ subjects:
 - kind: User
   name: jane@hipstershop.com
   apiGroup: rbac.authorization.k8s.io
-oleRef:
+roleRef:
   kind: ClusterRole
   name: namespace-reader
   apiGroup: rbac.authorization.k8s.io
